[tool.poetry]
name = "video_audio_mixer"
version = "0.1.0"
description = ""
authors = ["henrynoble01 <henrynoble01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.8.1"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
